# additive

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  video.rs
crates/cli/tests/: renderer_parity.rs  video_output.rs
crates/core/: Cargo.toml
crates/core/src/: additive.rs  generator.rs  gpu.rs  lib.rs  transition.rs
crates/core/src/transitions/: aqua_dissolve.rs  aqua_dissolve.wgsl  crossfade.rs  crossfade.wgsl  mod.rs  orb_dissolve.rs  orb_dissolve.wgsl
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: overview.md  roadmap.md
web/: README.md  wrangler.toml
