[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["kako-jun"]
license = "MIT"
homepage = "https://github.com/kako-jun/additive"
repository = "https://github.com/kako-jun/additive"
rust-version = "1.87.0"

[workspace.dependencies]
# core は png のみ継承（wasm バンドルサイズ最小化）。CLI 側で jpeg/webp を足す。
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
# wgpu プロダクション・レンダラ（#1）。core の gpu feature でのみ有効化する。
wgpu = "29"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
# Test-only: scratch dirs for the CLI end-to-end renderer-parity test.
tempfile = "3"
# orber-core: No.13 玉化ディゾルブ（#2）の玉エンジン供給元。crates.io 未公開なので
# git 依存で引く。additive-core の gpu feature 内に閉じ込め、wasm(gpu 無し)を汚さない。
orber-core = { git = "https://github.com/kako-jun/orber" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
