[package]
name = "additive-13-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WASM bindings for additive-13-core (browser transition preview)"
keywords = ["wasm", "image", "transition"]
categories = ["wasm", "graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
additive-13-core = { path = "../core", version = "0.1.0" }
image = { workspace = true }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
